// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js @composes should allow composing classes from the composed file 1`] = `
{
  "a": [
    "mc_wooga",
    "mc_a",
  ],
  "b": [
    "mc_b",
  ],
  "wooga": [
    "mc_wooga",
  ],
}
`;

exports[`/processor.js @composes should allow for chains of @composes-included files 1`] = `
{
  "a": [
    "mc_wooga",
    "mc_notblue",
    "mc_a",
  ],
  "b": [
    "mc_wooga",
    "mc_b",
  ],
  "notblue": [
    "mc_wooga",
    "mc_notblue",
  ],
  "wooga": [
    "mc_wooga",
  ],
}
`;

exports[`/processor.js @composes should include compositions from the composed file 1`] = `
{
  "packages/processor/test/specimens/at-composes.css": {
    "a": [
      "mc_a",
    ],
    "b": [
      "mc_wooga",
      "mc_b",
    ],
    "wooga": [
      "mc_wooga",
    ],
  },
  "packages/processor/test/specimens/simple.css": {
    "wooga": [
      "mc_wooga",
    ],
  },
}
`;

exports[`/processor.js @composes should include exported classes from the composed file 1`] = `
{
  "a": [
    "mc_a",
  ],
  "b": [
    "mc_b",
  ],
  "booga": [
    "mc_booga",
  ],
  "looga": [
    "mc_booga",
    "mc_looga",
  ],
}
`;

exports[`/processor.js @composes should include exported classes from the composed file 2`] = `
"/* packages/processor/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/processor/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/processor/test/specimens/at-composes.css */
.mc_a {
    color: aqua;
}
.mc_b {
    color: blue;
}
"
`;

exports[`/processor.js @composes should include external compositions from the composed file 1`] = `
{
  "packages/processor/test/specimens/at-composes.css": {
    "a": [
      "mc_a",
    ],
    "b": [
      "mc_booga",
      "mc_wooga",
      "mc_b",
    ],
    "booga": [
      "mc_booga",
    ],
    "tooga": [
      "mc_tooga",
    ],
    "wooga": [
      "mc_booga",
      "mc_wooga",
    ],
  },
  "packages/processor/test/specimens/folder/folder.css": {
    "folder": [
      "mc_folder",
    ],
  },
  "packages/processor/test/specimens/local.css": {
    "booga": [
      "mc_booga",
    ],
    "looga": [
      "mc_booga",
      "mc_looga",
    ],
  },
  "packages/processor/test/specimens/start.css": {
    "booga": [
      "mc_booga",
    ],
    "tooga": [
      "mc_tooga",
    ],
    "wooga": [
      "mc_booga",
      "mc_wooga",
    ],
  },
}
`;

exports[`/processor.js @composes should not include exported values from the composed file 1`] = `{}`;

exports[`/processor.js @composes should output css from the composed file 1`] = `
"/* packages/processor/test/specimens/simple.css */
.mc_wooga { color: red; }
/* packages/processor/test/specimens/at-composes.css */
.mc_a {
    color: aqua;
}
.mc_b {
    color: blue;
}
"
`;
